fix gap between content event card and fix ordering on event cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -477,7 +477,7 @@ small.tag {
   // grid-gap: 1rem;
   h5 {
     font-size: .9em;
-    line-height: 16px;
+    line-height: 18px;
   }
   &:hover {
     h5 {
